--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vinn65.github.io/Quiz-App",
+  "homepage": "https://agnesnjoroge.github.io/Vin",
   "name": "quiz-client",
   "version": "0.1.0",
   "private": true,
